err/pgcsv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports.csv-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/banal'...
Listing './lib/python3.5/site-packages/banal-0.3.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/normality'...
Listing './lib/python3.5/site-packages/normality-0.5.7.dist-info'...
Listing './lib/python3.5/site-packages/pgcsv'...
Compiling './lib/python3.5/site-packages/pgcsv/cli.py'...
***   File "./lib/python3.5/site-packages/pgcsv/cli.py", line 21
    print tabulate(db.headers.items(), headers=['Column', 'CSV Header'])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pgcsv/csv.py'...
***   File "./lib/python3.5/site-packages/pgcsv/csv.py", line 42
    print 'Loaded %s...' % self.count
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pgcsv-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
